  UTF-8 encoding is now default for XHTML.
* Rudimentary Struts integration.


1.4
---
* Any java.util.Collection can be used as the list type, 
  not only java.util.List.
* int[], long[], short[], double[], float[] and boolean[] 
  can be used as the list type.
* acceptNull parameter.
* Maverick integration.


1.5
---
* LSP framework.
* SimpleExtLib for easier extension library implementation.
* encodeURL in Servlet extension library.
* Use Servlet extention functions from XSLT stylesheets.
* Custom XSLT transform factory for Maverick to load stylesheets from
  WEB-INF/classes and use the improved formatting code.
* LSP compiler lower thread priority to be allow other processes to run 
  during compilation.
* Fixed bug in LSP translate function.
* HTML formatter strip namespace prefixes in all cases.
* HTML and XHTML formatter add <meta> with charset declaration.
* isset() function to test if a variable is set.


1.5.2
-----
* Allow setting parameters to SQL NULL using Java null value in DBConnection.
* Possible to omit SYSTEM component in DOCTYPE in HTML serialization.
* Possbile to force <?xml?> declaration in XHTML serialization.


1.6
---
* Fixed formatting of float values.
* Fixed escaping in HTML serialization.
* Fixed bug with & in attribute values in HTML serialization.
* Fixed bug with odd line delimiters.
* New methods for convenience and efficiency in Serializer, 
  send a String/CharSequence directly without converting to char[].
* Enclose feature.


1.6.1
-----
* Buffering in serialization for better performance.
* html-fragment and xhtml-fragment output methods for AJAX support.
* Change default output type from HTML to XHTML.


1.6.2
-----
* New method for extension library discovery.


1.7
---
* haselement() function.
* Support CharSequence.
* Support ResourceBundle.
* null values can be passed to LSP for use as arguments to extension functions.


1.7.1
-----
* isUserInRole function in Servlet extlib.
* nvl() function.